Fix icon color for dark mode in repos dropdown

--- a/web/src/layout/search/RepositorySection.module.css
+++ b/web/src/layout/search/RepositorySection.module.css
@@ -1,6 +1,7 @@
 .link {
   font-size: 0.8rem;
   max-width: 100%;
+  color: var(--color-font);
 }
 
 .icon {
